--- a/g5Mindr/g5Mindr/Cells/RootCell.xib
+++ b/g5Mindr/g5Mindr/Cells/RootCell.xib
@@ -8,20 +8,28 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RootCellID" id="XWn-q6-Tn3" customClass="RootCell">
-            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                <rect key="frame" x="0.0" y="0.0" width="106" height="106"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tMq-xL-dVs" userLabel="Outer Ring">
-                        <rect key="frame" x="8" y="8" width="64" height="64"/>
+                        <rect key="frame" x="23" y="23" width="60" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="ABd-nA-Con"/>
+                            <constraint firstAttribute="height" constant="60" id="ork-KB-JZ9"/>
+                        </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="vwP-yY-9PL" userLabel="Inner Ring">
-                        <rect key="frame" x="12" y="12" width="56" height="56"/>
+                        <rect key="frame" x="28" y="28" width="50" height="50"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="50" id="fVv-eg-gjk"/>
+                            <constraint firstAttribute="height" constant="50" id="fZR-iI-2ce"/>
+                        </constraints>
                     </imageView>
                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="orange_hexagon.png" translatesAutoresizingMaskIntoConstraints="NO" id="me5-ab-VwN" userLabel="Emoticon Image View">
-                        <rect key="frame" x="20" y="20" width="40" height="40"/>
+                        <rect key="frame" x="33" y="33" width="40" height="40"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="MNv-JE-3TB"/>
@@ -34,15 +42,11 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="me5-ab-VwN" firstAttribute="centerX" secondItem="XWn-q6-Tn3" secondAttribute="centerX" id="6fI-Ix-0CR"/>
-                <constraint firstItem="tMq-xL-dVs" firstAttribute="top" secondItem="XWn-q6-Tn3" secondAttribute="top" constant="8" id="8p7-Vq-Wxl"/>
-                <constraint firstAttribute="trailing" secondItem="vwP-yY-9PL" secondAttribute="trailing" constant="12" id="97D-Ni-Bod"/>
-                <constraint firstAttribute="bottom" secondItem="vwP-yY-9PL" secondAttribute="bottom" constant="12" id="HTM-QO-z0p"/>
+                <constraint firstItem="tMq-xL-dVs" firstAttribute="centerX" secondItem="XWn-q6-Tn3" secondAttribute="centerX" id="AdD-Jx-ehb"/>
                 <constraint firstItem="me5-ab-VwN" firstAttribute="centerY" secondItem="XWn-q6-Tn3" secondAttribute="centerY" id="LSt-uF-tQH"/>
-                <constraint firstItem="vwP-yY-9PL" firstAttribute="top" secondItem="XWn-q6-Tn3" secondAttribute="top" constant="12" id="Vsb-IJ-GL1"/>
-                <constraint firstAttribute="bottom" secondItem="tMq-xL-dVs" secondAttribute="bottom" constant="8" id="e3D-Hm-N15"/>
-                <constraint firstAttribute="trailing" secondItem="tMq-xL-dVs" secondAttribute="trailing" constant="8" id="jmq-2E-Tf2"/>
-                <constraint firstItem="vwP-yY-9PL" firstAttribute="leading" secondItem="XWn-q6-Tn3" secondAttribute="leading" constant="12" id="stN-Le-ff0"/>
-                <constraint firstItem="tMq-xL-dVs" firstAttribute="leading" secondItem="XWn-q6-Tn3" secondAttribute="leading" constant="8" id="xlb-cW-Xe1"/>
+                <constraint firstItem="tMq-xL-dVs" firstAttribute="centerY" secondItem="XWn-q6-Tn3" secondAttribute="centerY" id="Zk6-vW-75T"/>
+                <constraint firstItem="vwP-yY-9PL" firstAttribute="centerY" secondItem="tMq-xL-dVs" secondAttribute="centerY" id="e75-g6-Da1"/>
+                <constraint firstItem="vwP-yY-9PL" firstAttribute="centerX" secondItem="tMq-xL-dVs" secondAttribute="centerX" id="m9w-Me-biQ"/>
             </constraints>
             <size key="customSize" width="160" height="145"/>
             <connections>
