--- a/g5Mindr/g5Mindr/XIBs/g5LocationConditionViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5LocationConditionViewController.xib
@@ -2,7 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10116"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="g5LocationConditionViewController">
@@ -16,58 +16,18 @@
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bVn-yS-hUh" userLabel="View - Header">
-                    <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
-                    <subviews>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Nr-Xy-foW" userLabel="View - Separator">
-                            <rect key="frame" x="0.0" y="62" width="600" height="2"/>
-                            <color key="backgroundColor" red="0.22352941179999999" green="0.33725490200000002" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="2" id="R5h-tx-qnJ"/>
-                            </constraints>
-                        </view>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose Conditions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmu-4W-Aqc" userLabel="Label - Title">
-                            <rect key="frame" x="38" y="28" width="524" height="32"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="32" id="OxS-7l-V2E"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="19"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="1Nr-Xy-foW" firstAttribute="leading" secondItem="bVn-yS-hUh" secondAttribute="leading" id="0r0-dD-O2R"/>
-                        <constraint firstAttribute="trailing" secondItem="fmu-4W-Aqc" secondAttribute="trailing" constant="38" id="39Q-hd-YMI"/>
-                        <constraint firstAttribute="height" constant="64" id="AlP-sI-1p9"/>
-                        <constraint firstItem="1Nr-Xy-foW" firstAttribute="top" secondItem="fmu-4W-Aqc" secondAttribute="bottom" constant="2" id="fZ7-Zk-oVy"/>
-                        <constraint firstItem="fmu-4W-Aqc" firstAttribute="leading" secondItem="bVn-yS-hUh" secondAttribute="leading" constant="38" id="iQj-mK-y2X"/>
-                        <constraint firstAttribute="trailing" secondItem="1Nr-Xy-foW" secondAttribute="trailing" id="jHH-ow-3kd"/>
-                        <constraint firstAttribute="bottom" secondItem="1Nr-Xy-foW" secondAttribute="bottom" id="wYR-rf-uhu"/>
-                    </constraints>
-                </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="608-7Z-cwY" customClass="MGLMapView">
-                    <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="bVn-yS-hUh" secondAttribute="trailing" id="6bX-QB-lmR"/>
                 <constraint firstItem="608-7Z-cwY" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="BGz-Q3-oc5"/>
-                <constraint firstItem="bVn-yS-hUh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Itp-VL-Q8v"/>
-                <constraint firstAttribute="bottom" secondItem="bVn-yS-hUh" secondAttribute="bottom" id="JhG-63-pYZ"/>
-                <constraint firstItem="bVn-yS-hUh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="JqB-iz-0mp"/>
-                <constraint firstItem="608-7Z-cwY" firstAttribute="top" secondItem="bVn-yS-hUh" secondAttribute="bottom" id="LpO-Hl-Jss"/>
                 <constraint firstAttribute="bottom" secondItem="608-7Z-cwY" secondAttribute="bottom" id="c2D-lm-jIA"/>
+                <constraint firstItem="608-7Z-cwY" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="gfe-zv-KPu"/>
                 <constraint firstAttribute="trailing" secondItem="608-7Z-cwY" secondAttribute="trailing" id="v9a-qB-L4k"/>
             </constraints>
-            <variation key="default">
-                <mask key="constraints">
-                    <exclude reference="JhG-63-pYZ"/>
-                </mask>
-            </variation>
             <point key="canvasLocation" x="185" y="310"/>
         </view>
     </objects>
