First Cut of the ReminderVC

--- a/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
+++ b/g5Mindr/g5Mindr/XIBs/g5ReminderViewController.xib
@@ -7,6 +7,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="g5ReminderViewController">
             <connections>
+                <outlet property="deleteButton" destination="MFu-YE-cmz" id="U8c-68-1NE"/>
+                <outlet property="deleteButtonBackgroundView" destination="WeI-ja-v12" id="cYt-iU-21O"/>
+                <outlet property="emoticonImageView" destination="U0h-X0-5jE" id="Yp1-wS-LAb"/>
+                <outlet property="innerRingImageView" destination="j5g-ur-l4w" id="jwY-bw-phB"/>
+                <outlet property="outerRingImageView" destination="hNd-kv-iJS" id="ewH-yx-3mI"/>
+                <outlet property="reminderDetailTableview" destination="Sqq-Ie-jHv" id="dSV-Sr-IDP"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -14,7 +20,155 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <subviews>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="gSL-8G-KAa">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wbd-an-rOM" userLabel="View - Header">
+                    <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E5N-Qn-g7U" userLabel="View - Separator">
+                            <rect key="frame" x="0.0" y="62" width="600" height="2"/>
+                            <color key="backgroundColor" red="0.22352941179999999" green="0.33725490200000002" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="2" id="mdL-Nq-CCr"/>
+                            </constraints>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reminder Details" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LQI-h2-MB5" userLabel="Label - Title">
+                            <rect key="frame" x="38" y="28" width="524" height="32"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="32" id="P0L-sD-5Ik"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" name="Baskerville-Bold" family="Baskerville" pointSize="19"/>
+                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="45N-KU-HOx">
+                            <rect key="frame" x="12" y="16" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="44" id="HJF-1f-Hfd"/>
+                                <constraint firstAttribute="height" constant="44" id="e2K-jI-1Dd"/>
+                            </constraints>
+                            <state key="normal" image="button_back_grey"/>
+                            <connections>
+                                <action selector="didPressBackButton:" destination="-1" eventType="touchUpInside" id="Vds-Yw-Hiu"/>
+                            </connections>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="trailing" secondItem="E5N-Qn-g7U" secondAttribute="trailing" id="Bha-u4-xTJ"/>
+                        <constraint firstItem="LQI-h2-MB5" firstAttribute="leading" secondItem="wbd-an-rOM" secondAttribute="leading" constant="38" id="Epj-DH-ehg"/>
+                        <constraint firstAttribute="height" constant="64" id="NvZ-SI-J4m"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="600" id="Wim-Zd-um8"/>
+                        <constraint firstItem="E5N-Qn-g7U" firstAttribute="top" secondItem="45N-KU-HOx" secondAttribute="bottom" constant="2" id="bOi-An-rgP"/>
+                        <constraint firstAttribute="bottom" secondItem="E5N-Qn-g7U" secondAttribute="bottom" id="bPY-oG-uGa"/>
+                        <constraint firstItem="E5N-Qn-g7U" firstAttribute="top" secondItem="LQI-h2-MB5" secondAttribute="bottom" constant="2" id="cVI-NC-fCi"/>
+                        <constraint firstItem="45N-KU-HOx" firstAttribute="leading" secondItem="wbd-an-rOM" secondAttribute="leading" constant="12" id="d7Q-F8-kbl"/>
+                        <constraint firstAttribute="trailing" secondItem="LQI-h2-MB5" secondAttribute="trailing" constant="38" id="eZC-hO-5Re"/>
+                        <constraint firstItem="E5N-Qn-g7U" firstAttribute="leading" secondItem="wbd-an-rOM" secondAttribute="leading" id="mNh-jl-S4E"/>
+                    </constraints>
+                    <variation key="default">
+                        <mask key="constraints">
+                            <exclude reference="Wim-Zd-um8"/>
+                        </mask>
+                    </variation>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BtL-Ci-QyF" userLabel="View - Reminder Details">
+                    <rect key="frame" x="0.0" y="64" width="600" height="160"/>
+                    <subviews>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hNd-kv-iJS" userLabel="Outer Ring">
+                            <rect key="frame" x="270" y="20" width="60" height="60"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="60" id="MQW-rh-Swg"/>
+                                <constraint firstAttribute="height" constant="60" id="hbL-O2-nec"/>
+                            </constraints>
+                        </imageView>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="j5g-ur-l4w" userLabel="Inner Ring">
+                            <rect key="frame" x="275" y="25" width="50" height="50"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="50" id="HRF-eg-zPt"/>
+                                <constraint firstAttribute="height" constant="50" id="qZJ-6j-p4r"/>
+                            </constraints>
+                        </imageView>
+                        <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="orange_hexagon.png" translatesAutoresizingMaskIntoConstraints="NO" id="U0h-X0-5jE" userLabel="Emoticon Image View">
+                            <rect key="frame" x="280" y="30" width="40" height="40"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="40" id="UT9-qP-kc0"/>
+                                <constraint firstAttribute="width" constant="40" id="jcs-iv-i2P"/>
+                            </constraints>
+                        </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5I2-ZU-FR5" userLabel="Label - Explanation">
+                            <rect key="frame" x="18" y="88" width="564" height="64"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="5I2-ZU-FR5" secondAttribute="bottom" constant="8" id="9Dr-lc-Qbv"/>
+                        <constraint firstItem="j5g-ur-l4w" firstAttribute="centerY" secondItem="hNd-kv-iJS" secondAttribute="centerY" id="Brz-qu-dkE"/>
+                        <constraint firstItem="5I2-ZU-FR5" firstAttribute="leading" secondItem="BtL-Ci-QyF" secondAttribute="leading" constant="18" id="Bsn-Zk-oLK"/>
+                        <constraint firstItem="5I2-ZU-FR5" firstAttribute="top" secondItem="hNd-kv-iJS" secondAttribute="bottom" constant="8" id="IK6-07-yma"/>
+                        <constraint firstItem="hNd-kv-iJS" firstAttribute="centerX" secondItem="BtL-Ci-QyF" secondAttribute="centerX" id="Ni6-jJ-jUr"/>
+                        <constraint firstItem="j5g-ur-l4w" firstAttribute="centerX" secondItem="hNd-kv-iJS" secondAttribute="centerX" id="WKv-lc-tsi"/>
+                        <constraint firstAttribute="trailing" secondItem="5I2-ZU-FR5" secondAttribute="trailing" constant="18" id="caF-Hz-F1p"/>
+                        <constraint firstItem="hNd-kv-iJS" firstAttribute="top" secondItem="BtL-Ci-QyF" secondAttribute="top" constant="20" id="h77-Yf-nnD"/>
+                        <constraint firstAttribute="height" constant="160" id="pb8-a8-DOH"/>
+                        <constraint firstItem="U0h-X0-5jE" firstAttribute="centerY" secondItem="hNd-kv-iJS" secondAttribute="centerY" id="wMQ-wp-RuR"/>
+                        <constraint firstItem="U0h-X0-5jE" firstAttribute="centerX" secondItem="hNd-kv-iJS" secondAttribute="centerX" id="ydl-Se-4DD"/>
+                    </constraints>
+                </view>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Sqq-Ie-jHv">
+                    <rect key="frame" x="0.0" y="224" width="600" height="90"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="90" id="UrO-fc-c3n"/>
+                    </constraints>
+                </tableView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WeI-ja-v12" userLabel="View - Delete Button">
+                    <rect key="frame" x="270" y="510" width="60" height="60"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MFu-YE-cmz">
+                            <rect key="frame" x="7" y="7" width="46" height="46"/>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstItem="MFu-YE-cmz" firstAttribute="top" secondItem="WeI-ja-v12" secondAttribute="top" constant="7" id="HYW-5c-t06"/>
+                        <constraint firstAttribute="height" constant="60" id="Mdu-7o-1OH"/>
+                        <constraint firstAttribute="bottom" secondItem="MFu-YE-cmz" secondAttribute="bottom" constant="7" id="U8E-Ck-U50"/>
+                        <constraint firstItem="MFu-YE-cmz" firstAttribute="leading" secondItem="WeI-ja-v12" secondAttribute="leading" constant="7" id="Wbs-uR-X53"/>
+                        <constraint firstAttribute="trailing" secondItem="MFu-YE-cmz" secondAttribute="trailing" constant="7" id="aWc-xs-a7I"/>
+                        <constraint firstAttribute="width" constant="60" id="pPQ-lv-H99"/>
+                    </constraints>
+                </view>
+            </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="gSL-8G-KAa" secondAttribute="bottom" id="2xX-q6-9EK"/>
+                <constraint firstItem="wbd-an-rOM" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6VS-JR-VZv"/>
+                <constraint firstItem="Sqq-Ie-jHv" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="Lub-tZ-q11"/>
+                <constraint firstItem="WeI-ja-v12" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Q3j-VO-VfH"/>
+                <constraint firstItem="BtL-Ci-QyF" firstAttribute="top" secondItem="wbd-an-rOM" secondAttribute="bottom" id="S7y-wt-2e9"/>
+                <constraint firstAttribute="trailing" secondItem="wbd-an-rOM" secondAttribute="trailing" id="ZRn-dA-AOe"/>
+                <constraint firstAttribute="trailing" secondItem="gSL-8G-KAa" secondAttribute="trailing" id="cA1-va-Znu"/>
+                <constraint firstItem="Sqq-Ie-jHv" firstAttribute="top" secondItem="BtL-Ci-QyF" secondAttribute="bottom" id="fBu-PJ-rcA"/>
+                <constraint firstItem="BtL-Ci-QyF" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="fj8-xh-RaH"/>
+                <constraint firstAttribute="bottom" secondItem="WeI-ja-v12" secondAttribute="bottom" constant="30" id="gEb-4Y-AAn"/>
+                <constraint firstItem="wbd-an-rOM" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="gFh-nw-qTN"/>
+                <constraint firstItem="gSL-8G-KAa" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ox9-3c-K0y"/>
+                <constraint firstItem="gSL-8G-KAa" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="qua-pL-fBI"/>
+                <constraint firstAttribute="trailing" secondItem="Sqq-Ie-jHv" secondAttribute="trailing" id="rU3-3P-ryi"/>
+                <constraint firstAttribute="trailing" secondItem="BtL-Ci-QyF" secondAttribute="trailing" id="v4K-x2-qQn"/>
+            </constraints>
         </view>
     </objects>
+    <resources>
+        <image name="background" width="375" height="667"/>
+        <image name="button_back_grey" width="24" height="24"/>
+        <image name="orange_hexagon.png" width="160" height="145"/>
+    </resources>
 </document>
